Rename start application for better understanding

--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>puf.frisbee.frontend/puf.frisbee.frontend.StartApplication</mainClass>
+                            <mainClass>puf.frisbee.frontend/puf.frisbee.frontend.StartFrisbeeApp</mainClass>
                         </configuration>
                     </execution>
                 </executions>
