--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 # BACKEND_BASE_URL=https://puf-frisbee-backend.herokuapp.com/api
 BACKEND_BASE_URL=http://localhost:8080/api
+WEBSOCKET_BACKEND_URL=ws://localhost:8080/ws
