--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -48,6 +48,16 @@
 			<artifactId>dotenv-java</artifactId>
 			<version>2.2.3</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.websocket</groupId>
+			<artifactId>javax.websocket-api</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.java-websocket</groupId>
+			<artifactId>Java-WebSocket</artifactId>
+			<version>1.3.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
