basic socket prototype

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 # BACKEND_BASE_URL=https://puf-frisbee-backend.herokuapp.com/api
 BACKEND_BASE_URL=http://localhost:8080/api
+SOCKET_IP=localhost
+SOCKET_PORT=9999
